# zero2prod

./: Cargo.toml  Dockerfile
.circleci/: config.yml
configuration/: base.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
